--- a/web/css/gu.renew.common.scss
+++ b/web/css/gu.renew.common.scss
@@ -122,7 +122,7 @@ address, cite, code, dfn, em, var {
 }
 
 strong {
-  font-weight: 400;
+  font-weight: 700;
   font-style: normal
 }
 
@@ -174,7 +174,7 @@ a, button {
   color: $color_level2
 }
 
-button, button:active, button:focus {
+button{
   padding: 0
 }
 
@@ -491,6 +491,38 @@ button div, button:active div, button:before, button:focus div {
     border-radius: 0;
     font-size: $fz18px;
     line-height: 53px;
+  }
+  &.sort_small{
+    background: #ffffff;
+    border-radius:2px;
+    span{
+      background: url("../images/gu.renew.common/icon_size_small_off.png") no-repeat left center;
+      padding-left: 20px;
+    }
+    &.active{
+      background: #3c444d;
+      border:1px solid #3c444d;
+      span{
+        color: #ffffff;
+        background-image: url("../images/gu.renew.common/icon_size_small_on.png")
+      }
+    }
+  }
+  &.sort_big{
+    background: #ffffff;
+    border-radius:2px;
+    span{
+      background: url("../images/gu.renew.common/icon_size_big_off.png") no-repeat left center;
+      padding-left: 20px;
+    }
+    &.active{
+      background: #3c444d;
+      border:1px solid #3c444d;
+      span{
+        color: #ffffff;
+        background-image: url("../images/gu.renew.common/icon_size_big_on.png")
+      }
+    }
   }
 }
 
