--- a/web/css/gu.renew.contents.scss
+++ b/web/css/gu.renew.contents.scss
@@ -1,6 +1,14 @@
 .align_c {
   text-align: center;
 }
+.blind{
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0 );
+  margin: -1px;
+  width: 1px;
+  height: 1px;
+}
 
 /* 테이블형 리스트 */
 .list_table_type {
@@ -240,7 +248,7 @@
       }
 
       .shortage {
-        color: #fd5854;
+        color: #ff4858;
       }
 
       .enough {
@@ -650,8 +658,6 @@
     }
   }
 }
-
-
 
 /* 유의사항 */
 .note_box {
@@ -1119,36 +1125,59 @@
     margin-bottom: 0;
   }
 
-  .insurance {
+  .insurance_info {
     height: 110px;
     margin-bottom: 10px !important;
-    border: 1px solid $line_color3;
-    border-radius: 8px;
-
-    &:hover::before {
-      display: none;
-    }
-
-    .info {
-      position: relative;
-      width: 460px;
-      padding: 0px 30px 0;
-      border-right: 1px solid $line_color3;
-
-      .name {
-        margin-bottom: 15px;
-      }
-
-      .btn_edit {
-        position: absolute;
-        right: 25px;
-        bottom: 27px;
+    position: relative;   
+    
+    &:hover{
+      .insurance{
+        &:before{
+          display: block;
+          position: absolute;
+          z-index: 10;
+          top: 0;
+          left: 0;
+          width: calc(100% - 4px);
+          height: calc(100% - 4px);
+          border: 2px solid #fe5855;
+          border-radius: 8px;
+          content: "";
+          box-shadow: none;
+        }
       }
     }
+    
+    .insurance{
+      height: 100%;      
+      border: 1px solid $line_color3;
+      border-radius: 8px;
 
-    .payment {
-      width: 240px;
-      padding: 0px 30px 0;
+      .info {
+        position: relative;
+        width: 460px;
+        padding: 0px 30px 0;
+        border-right: 1px solid $line_color3;
+
+        .name {
+          margin-bottom: 15px;
+        }      
+      }
+
+      .payment {
+        width: 240px;
+        padding: 0px 30px 0;
+        .top{
+          margin-bottom:5px;
+        }
+      }
+    }
+
+    .btn_edit {
+      position: absolute;
+      left: 393px;
+      bottom: 27px;
+      z-index: 10;
     }
   }
 
@@ -1192,7 +1221,7 @@
   }
 }
 
-/* basic_type */
+/* table basic_type */
 .basic_type {
   thead {
     th {
@@ -1590,10 +1619,59 @@
 /* 진단/상세 */
 .wrap.sub .content_wrap .content_area_sub .insurance_all_state{ 
   .content_scroll {
-    height: 784px;
+    height: 626px;
   }
 }
 .insurance_all_state{
+  .tab_list{
+    position: relative;    
+    margin-bottom:25px;
+
+    >ul{
+      @include clearline();
+      >li{
+        float: left;
+        margin-right:40px;
+        &:last-child{
+          margin-right: 0;
+        }
+        .tab{
+          font-size: $fz20px;
+          color: $color_level4;
+          letter-spacing: -0.075em;
+          vertical-align: top;
+        }
+        &.on{
+          .tab{
+            color: $color_level2;
+            font-weight: 700;
+            &:after{
+              display: block;
+              content: "";
+              width: 36px;
+              height: 3px;
+              margin-top:15px;
+              background: #01a7c4;
+            }
+          }
+          &:last-child{            
+            padding-bottom:86px;
+          }
+          .sort_list{
+            display: block;
+          }
+        }
+      }
+    }
+  }
+  .tab_content_box{
+    .tab_content{
+      display: none;
+      &.on{
+        display: block;
+      }
+    }
+  }
   >.title{
     font-size:$fz22px;
     color:$color_level1;
@@ -1605,7 +1683,7 @@
   .all_state_icon{
     background: #fff;
     border-radius: 10px;   
-    height: 714px;
+    height: 694px;
     overflow: hidden;
     padding:33px 0 0px;
     margin-bottom: 130px;    
@@ -1618,6 +1696,28 @@
         width: 159px;
         text-align: center;
         margin:0 18px;
+        
+        &:last-child {
+          ul{
+            &:before{
+              display: none;
+            }
+          }
+        }
+        ul{
+          position: relative;
+          &:before{
+            position: absolute;
+            top: 0;
+            right: -18px;
+            display: block;
+            content: "";
+            width: 1px;
+            height: 530px;
+            background: #f0f3f8;
+
+          }
+        }
         li{
           margin-bottom: 10px;
         }
@@ -1707,10 +1807,10 @@
           }
           &.no_join{
             >span{
-              background: #d0ddeb;
+              background: #cacaca;
             }
             .state{
-              color:#5d7ea2;
+              color:#777;
               &:before{
                 background: url(../images/gu.renew.contents/icon_all_state_no_join.png) no-repeat 0 0;
               }
@@ -1730,60 +1830,46 @@
         }
       }
     }
-  }
+  }  
   
-  .tab_type_list{ 
+  .sort_list{
     position: absolute;
-    top:772px;
-    left:0;  
-    background:#f0f3f8;    
-    width:782px;
-    .sort_list{
-      ul{
-        @include clearline();
-        margin:1px 1px 0 0;
-        li{
-          float: left;
-          width: 131px;
-          margin:-1px -1px 0 0;
-          position: relative;
-          &.active{
-            .sort{
-              z-index: 5;
-            }
-            &:before{
-              display: block;
-              content: "";
-              width:100%;
-              height: 100%;
-              background: #3c444d;
-              position: absolute;
-              top:0;
-              left:0;
-              border-radius: 3px;
-            }
-            .sort{
-              color:#fff;
-            }
+    display: none;
+    top:64px;
+    left:0;
+    width: 782px;
+    overflow: hidden;
+
+    ul{
+      @include clearline();
+      margin:-5px -5px 0;
+      li{
+        float: left;
+        margin:5px;
+        &.active{
+          .sort{      
+            color:#fff;            
+            background: #3c444d;            
+            border: 1px solid #3c444d;
           }
-          .sort{
-            width:100%;
-            background: #fff;
-            text-align: center;
-            border: 1px solid $line_color3;
-            vertical-align: top;
-            padding:5px;
-            font-size:$fz14px;
-            color:$color_level2;
-          }
+        }
+        .sort{
+          padding: 7px 16px;
+          background: #fff;
+          border: 1px solid $line_color3;
+          border-radius: 15px;
+          font-size:$fz14px;
+          color:$color_level2;
+          letter-spacing: -0.05em;
+          line-height: 1;
         }
       }
     }
-  }
+  }  
 
   .state_info{
     width:782px;
-    padding-top: 30px;
+    margin: 0 0 30px;
     .tit_area{
       position: relative;
       margin-bottom: 12px;
@@ -1806,6 +1892,9 @@
           }
           &.enough{
             background: #01a7c4;
+          }
+          &.no_join{
+            background: #cacaca;
           }
         }
       }
@@ -2000,8 +2089,25 @@
             .icon{
               background: url(../images/gu.renew.contents/icon_all_state_enough.png) no-repeat 0 0;
             }
+          }          
+        }        
+        &.no_join{
+          .info{
+            .percent{
+              color:#777;
+              right:-27px !important;
+            }
+            .bar {
+              background:#01a7c4;
+            }
           }
-          
+          .state{
+            background:#cacaca;
+            color:#777;
+            .icon{
+              background: url(../images/gu.renew.contents/icon_all_state_no_join.png) no-repeat 0 0;
+            }
+          }          
         }        
       }
       .insurance_list2{
