--- a/mobile/css/gu.renew.contents.scss
+++ b/mobile/css/gu.renew.contents.scss
@@ -6,6 +6,50 @@
   text-align: center;
 }
 
+/* customer_sort */
+.customer_sort{
+  padding: 20px 20px 15px;
+  .customer_total{
+    font-size: $fz16px;
+    color: $color_level2;
+    letter-spacing: -0.075em;
+    font-weight: 700;
+    strong{
+      font-size: $fz18px;
+      color:#fe5855;      
+      font-weight: 700;
+    }
+  }
+  .sorting{
+    float: right;
+    
+  }
+  .select_box{
+    display: inline-block;
+    .nice-select{
+      padding: 0 37px 0 10px;
+      border:1px solid #e0e4ea;
+      border-radius:5px;
+      font-size: $fz12px;
+      color: $color_level2;
+      height: 30px;
+      line-height: 28px;
+      letter-spacing: -0.075em;
+      &:after{
+          top: 50%;
+          right: 15px;
+          width: 7px;
+          height: 7px;
+          margin-top: -6px;
+          border-color: #3c444d;
+      }
+    }
+  }
+  .list_type_select{    
+    display: inline-block;
+  }
+}
+
 /* customer_list_box */
 .customer_list_box{  
   padding: 0 20px;
@@ -158,12 +202,64 @@
     position: relative;
     background: #fff;
     margin:0 0 10px;
+    border-radius: 10px;
+    overflow: hidden;
     &:last-child{
       margin:0;
     }
   }
   .customer_info{
-    padding: 15px 20px;
+    position: relative;
+    padding: 15px 20px 10px;
+    display: block;
+
+    .name{
+      font-size: $fz15px;
+      color: $color_level2;
+      letter-spacing: -0.075em;
+      padding-right: 105px;
+    }
+    .info{
+      color: $color_level4;
+      font-size: $fz14px;
+      letter-spacing: -0.025em;
+      padding-right: 105px;
+      line-height: 1;
+      margin-bottom:20px;
+    }
+    .list{
+      &:last-child{
+        @include clearline();
+      }
+      li{
+        float: left;
+        display: block;
+        width: 74px;
+        line-height: 15px;
+        .tit{
+          font-size: $fz11px;
+          color: $color_level5;
+          letter-spacing: -0.075em;          
+        }
+        .txt{
+          font-size: $fz12px;
+          color: $color_level3;
+          letter-spacing: -0.025em;
+        }
+      }
+    }    
+  }
+  .btn_box{
+    padding: 0px 20px 15px;
+    .btn_pdf{
+      float: right;
+      width: 118px;
+    }
+  }
+  .btn_util{
+    position: absolute;
+    top: 17px;
+    right: 20px;
   }
 }
 
@@ -1208,11 +1304,13 @@
 /* btn_circle */
 .btn_circle {
   display: inline-block;
-  width: 38px;
-  height: 38px;
-  border: 1px solid #eaeaea;
+  width: 29px;
+  height: 29px;
   border-radius: 50%;
   text-indent: -9999px;
+  background-color: #f0f3f8;
+  background-size: 100%;
+  background-position: 0 0;
 
   > span {
     display: inline-block;
@@ -1220,30 +1318,31 @@
 
   &.on {
     border: none;
+    background-color: #ffe4e3;
   }
 
   &.like {
-    background: url(../images/gu.renew.common/icon_like_off.png) no-repeat center center;
+    background-image: url(../images/gu.renew.common/icon_like_off.png);
   }
 
   &.like.on {
-    background: #ffe4e3 url(../images/gu.renew.common/icon_like_on.png) no-repeat center center;
+    background-image: url(../images/gu.renew.common/icon_like_on.png);
   }
 
   &.analysis {
-    background: url(../images/gu.renew.common/icon_analysis_off.png) no-repeat center center;
+    background-image: url(../images/gu.renew.common/icon_analysis_off.png);
   }
 
   &.analysis.on {
-    background: #ffe4e3 url(../images/gu.renew.common/icon_analysis_on.png) no-repeat center center;
+    background-image: url(../images/gu.renew.common/icon_analysis_on.png);
   }
 
   &.agree {
-    background: url(../images/gu.renew.common/icon_agree_off.png) no-repeat center center;
+    background-image: url(../images/gu.renew.common/icon_agree_off.png);
   }
 
   &.agree.on {
-    background: #ffe4e3 url(../images/gu.renew.common/icon_agree_on.png) no-repeat center center;
+    background-image: url(../images/gu.renew.common/icon_agree_on.png);
   }
 }
 
