--- a/mobile/css/gu.renew.contents.scss
+++ b/mobile/css/gu.renew.contents.scss
@@ -475,16 +475,15 @@
 }
 
 .insurance_list_box {
-  padding-top: 10px;
+  padding: 10px 15px;
+  background: #fff;
   .note_box {
-    width: 782px;
     padding-bottom: 30px;
   }
 }
 
 .insurance_list {
-  width: 782px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;  
 
   .tit_box {
     margin-bottom: 15px;
@@ -550,134 +549,87 @@
     }
   }
 
+  .list{
+    .insurance {}
+  }
   .insurance {
     position: relative;
-    width: 100%;
-    height: 130px;
-    margin-bottom: 10px;
-  
-    &:hover:before {
+    display: block;
+    padding:10px 15px;
+    border: 1px solid #d5d5d5;
+    border-bottom-color: #ededed;
+    
+    &:active:before {
       display: block;
       position: absolute;
       z-index: 10;
       top: 0;
       left: 0;
-      width: calc(100% - 4px);
-      height: calc(100% - 4px);
-      border: 2px solid #fd5856;
+      width: calc(100% - 3px);
+      height: calc(100% - 3px);
+      border: 1.5px solid #fd5856;
       border-radius: 8px;
       content: "";
       box-shadow: 7px 7px 9px 0px rgba(0, 0, 0, 0.12);
-    }
-  
-    &:after {
-      @include clearline();
-    }
-  
+    }    
+   
     &:last-child {
       margin-bottom: 0;
     }
-  
-    .info {
-      display: table;
-      float: left;
-      width: 527px;
-      height: 100%;
-      padding: 0px 30px 0;
-      border-radius: 8px 0 0 8px;
-      background: #fff;
-  
-      .inner {
-        display: table-cell;
-        vertical-align: middle;
-      }
-  
-      .logo {
-        display: block;
-        height: 34px;
-        margin-bottom: 5px;
-  
-        img {
-          height: 100%;
-        }
-      }
-  
-      .name {
-        margin-bottom: 6px;
-        font-size: $fz20px;
-        font-weight: 500;
-        letter-spacing: -0.075em;
-        color: $color_level2;
-      }
-  
-      .date {
-        line-height: 1;
-  
-        .state {
-          display: inline-block;
-          height: 22px;
-          margin-right: 10px;
-          padding: 0 10px;
-          border-radius: 5px;
-          background: #ffeeed;
-          font-size: $fz14px;
-          line-height: 20px;
-          text-align: center;
-          color: #fd795c;
-        }
-      }
+    
+    .name {
+      margin-bottom: 6px;
+      font-size: $fz15px;
+      letter-spacing: -0.05em;
+      color: #010101;
     }
-  
-    .payment {
-      display: table;
-      float: right;
-      width: 253px;
-      height: 100%;
-      padding: 0px 30px 0;
-      border-radius: 0 8px 8px 0;
-      background: #fff;
-  
-      ul {
-        display: table-cell;
-        vertical-align: middle;
+    .payment_info{
+      @include clearline();
+      .state{
+        float: left;
+        display: inline-block;
+        margin-right: 10px;
+        padding: 0 10px;
+        border-radius: 5px;
+        background: #ffeceb;
+        font-size: $fz12px;
+        height: 18px;
+        line-height: 18px;
+        text-align: center;
+        color: #fd795b;
       }
-  
-      li {
-        display: table;
-        width: 100%;
-        line-height: 22px;
-        color: $color_level5;
-  
-        span {
-          display: table-cell;
-          font-size: $fz14px;
-        }
-  
-        .th {
-          width: 70px;
-          letter-spacing: -0.075em;
-        }
-  
-        .td {
-          text-align: right;
-          letter-spacing: -0.025em;
-        }
-  
-        &.top {
-          color: $color_level2;
-  
-          .td {
-            font-size: $fz20px;
-  
-            strong {
-              font-size: $fz22px;
-              font-weight: 700;
-              letter-spacing: -0.075em;
-            }
+      .info {
+        float: left;
+        line-height: 20px;
+        .payment {    
+          font-size: $fz12px;
+          strong{
+            font-size: $fz15px;
+          }
+          span{
+            margin-left:10px;
+            color: $color_level4;
           }
         }
+        .date {
+          color: $color_level4;      
+          letter-spacing: -0.05em;    
+        }
+      }  
+    }
+
+    .logo {
+      position: absolute;
+      bottom: 12px;
+      right: 15px;
+      display: block;
+      height: 18px;
+
+      img {
+        height: 100%;
       }
     }
+    
   
     &.disabled {
       .logo {
