--- a/mobile/css/gu.renew.common.scss
+++ b/mobile/css/gu.renew.common.scss
@@ -25,7 +25,8 @@ body {
   font-family: 'Apple SD Gothic Neo', 'Droid Sans', 'Spoqa Han Sans', Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
-  color: $color_level3
+  color: $color_level3;
+  letter-spacing:-0.03em;
 }
 
 h1, h2, h3, h4, h5, h6 {
